--- a/pika-trading-frontend/src/app/recuperar-contrasena/recuperar-contrasena.component.html
+++ b/pika-trading-frontend/src/app/recuperar-contrasena/recuperar-contrasena.component.html
@@ -1,17 +1,23 @@
 <div class="container">
-    <h1>Recuperación de cuenta</h1>
-    <p>
-      Ingresa tu correo electrónico, si este está registrado en nuestro sitio web
-      se te será enviado un link al email con el cual podrás restablecer tu contraseña.
-    </p>
-  
-    <form>
-      <label for="email">Dirección de correo electrónico</label>
-      <input type="email" id="email" placeholder="Ingrese su correo" required />
-  
-      <button type="submit">Enviar</button>
-    </form>
-  
-    <a href="/registro">¿No tienes cuenta? Regístrate aquí</a>
-  </div>
-  
+  <!-- Título principal -->
+  <h1>Recuperación de cuenta</h1>
+
+  <!-- Descripción del proceso de recuperación -->
+  <p>
+    Ingresa tu correo electrónico, si este está registrado en nuestro sitio web
+    se te será enviado un link al email con el cual podrás restablecer tu contraseña.
+  </p>
+
+  <!-- Formulario de recuperación de contraseña -->
+  <form>
+    <!-- Campo de entrada para el email -->
+    <label for="email">Dirección de correo electrónico</label>
+    <input type="email" id="email" placeholder="Ingrese su correo" required />
+
+    <!-- Botón para enviar el formulario -->
+    <button type="submit">Enviar</button>
+  </form>
+
+  <!-- Enlace para redirigir al registro si no tiene cuenta -->
+  <a href="/registro">¿No tienes cuenta? Regístrate aquí</a>
+</div>
